개발환경이 java11이어서 getFirst()함수 미동작 확인